<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.keepsolid.wetalkas.keepsolid.activities.AuthorisationActivity">



    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etAuthEmail"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etAuthPassword"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:text="@string/log_in"
        android:id="@+id/btAuthLogIn"

        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/etAuthEmail"
        android:layout_alignStart="@+id/etAuthEmail"
        android:layout_marginTop="230dp" />

    <Button
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:text="@string/sign_up"
        android:id="@+id/btAuthSignUp"

        android:layout_alignTop="@+id/btAuthLogIn"
        android:layout_alignRight="@+id/etAuthPassword"
        android:layout_alignEnd="@+id/etAuthPassword" />

</RelativeLayout>
