<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.keepsolid.wetalkas.keepsolid.activities.RegistrationActivity">



    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etRegEmail"
        android:hint="@string/email"


        android:layout_alignLeft="@+id/etRegPassword"
        android:layout_alignStart="@+id/etRegPassword"
        android:layout_marginTop="120dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etRegPassword"
        android:hint="@string/password"

        android:layout_below="@+id/etRegEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etRegRetryPassword"
        android:layout_below="@+id/etRegPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:hint="@string/retry_password" />

    <Button
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:text="@string/sign_up"
        android:id="@+id/btRegSignUp"
        android:layout_below="@+id/etRegRetryPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />




</RelativeLayout>
