<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDialogAddTaskName"
            android:layout_margin="15dp"
            android:hint="@string/task_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDialogAddTaskDescription"
            android:layout_below="@+id/etDialogAddTaskName"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/task_description" />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/etDialogAddTaskDate"
            android:layout_below="@+id/etDialogAddTaskDescription"
            android:layout_alignLeft="@+id/etDialogAddTaskDescription"
            android:layout_alignStart="@+id/etDialogAddTaskDescription"
            android:layout_marginRight="15dp"
            android:inputType="none"
            android:focusableInTouchMode="false"
            android:hint="@string/task_date"
            android:layout_marginBottom="15dp" />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/etDialogAddTaskTime"
            android:layout_below="@+id/etDialogAddTaskDescription"
            android:layout_alignRight="@+id/etDialogAddTaskDescription"
            android:layout_alignEnd="@+id/etDialogAddTaskDescription"
            android:layout_marginLeft="15dp"
            android:inputType="none"
            android:focusableInTouchMode="false"
            android:hint="@string/task_time"
            android:layout_marginBottom="15dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spDialogAddTaskPriority"
            android:layout_below="@+id/etDialogAddTaskDate"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:prompt="@string/task_priority" />

    </RelativeLayout>
</ScrollView>