<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">




<android.support.v7.widget.CardView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    card_view:cardCornerRadius="2dp"





    android:id="@+id/linearLayout"
    android:baselineAligned="false"
    android:clickable="true"
    android:longClickable="true"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTaskName"

            android:text="@string/task_name"
            android:textSize="20sp"
            android:textColor="@color/background_material_dark"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:id="@+id/tvTaskDescription"

            android:textSize="15sp"
            android:layout_below="@+id/tvTaskName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp" />

        <CheckBox
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/task_status"
            android:id="@+id/cbTaskDone"
            android:textSize="18sp"
            android:layout_alignTop="@+id/tvTaskDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:text="@string/task_date"
            android:id="@+id/tvTaskDate"
            android:textSize="18sp"
            android:layout_below="@+id/tvTaskDescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:gravity="left|center_vertical" />



    </RelativeLayout>


</android.support.v7.widget.CardView>

</RelativeLayout>