<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_50"
    android:clickable="true"
    android:longClickable="true">
        <TextView
            android:layout_width="160dp"
            android:layout_height="19dp"
            android:id="@+id/tvTaskName"
            android:text="@string/task_name"
            android:textSize="16sp"
            android:textColor="@color/primary_text_default_material_light"
            android:layout_marginTop="16dp"
            android:layout_toLeftOf="@+id/tvTaskDate"
            android:layout_alignLeft="@+id/tvTaskDescription"
            android:layout_alignStart="@+id/tvTaskDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:id="@+id/tvTaskDescription"
            android:textSize="14sp"
            android:textColor="@color/secondary_text_default_material_light"

            android:layout_below="@+id/tvTaskName"

            android:layout_marginRight="16dp"
            android:layout_marginLeft="72dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_date"
            android:id="@+id/tvTaskDate"
            android:gravity="right"
            android:textSize="12sp"
            android:textColor="@color/secondary_text_default_material_light"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />



    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivTaskPriority"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@color/colorPrimary"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true" />


</RelativeLayout>


